WFE-127: improves atom feed content.